# cribbage_ai

./: README.md  cribbage_claude.ai.py  pyproject.toml  setup.py  thoughts.txt  todo.txt
cribbage/: __init__.py  cards.py  cribbage.py  cribbage_board.py  discard_analyzer.py  hand.py  hand_scorer.py
cribbage/tests/: cards_test.py  cribbage_test.py  discard_analyzer_test.py  hand_scorer_test.py  hand_test.py
tests/cribbage/: cards_test.py  discard_analyzer_test.py  hand_scorer_test.py  hand_test.py
